@@ -34,6 +34,6 @@ BEGIN driver v_frmbuf_wr
  OPTION copyfiles = all;
  OPTION DEPENDS = (video_common);
  OPTION name = v_frmbuf_wr;
- OPTION version = 3.1;
+ OPTION version = 4.0;
 
 END driver
